fixed overlap in controls (for a smaller window)

--- a/trisis.css
+++ b/trisis.css
@@ -56,7 +56,7 @@ body {
 
 #control li{
 	color: white;
-	display: inline;
+	display: inline-block;
 	background-color: black;
 	border-style: solid;
 	border-color: fuchsia;
@@ -65,6 +65,7 @@ body {
 	padding: 10px 5px;
 	text-decoration: none;
 	border-radius: 6px 6px 6px 6px;
+	margin-bottom: 5px;
 }
 
 #scoreboard {
